[package]
name = "tark"
version = "0.1.3"
authors = ["ocornoc <ocornoc@protonmail.com>"]
edition = "2018"
include = ["src/**/*", "LICENSE-*"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ocornoc/tark"
description = "An `Arc` with a thread-local strong/weak count."

[profile.bench]
lto = "thin"

[dependencies]

[dev-dependencies]
rayon = "1.5.0"
criterion = { version = "0.3.4", features = ["html_reports"] }

[[bench]]
name = "single_thread_vs"
path = "benches/single_thread_vs.rs"
harness = false
